[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readmebro"
version = "0.1.2"
description = "AI-powered and AI-optional Python documentation generator"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "yaspin>=2.1.0"
]
optional-dependencies = { ai = ["ollama>=0.1.0"] }
keywords = ["documentation", "code-analysis", "readme", "AI", "ollama", "codellama"]

[project.urls]
"Homepage" = "https://github.com/samartha-siddhartha/readmebro"
"Bug Tracker" = "https://github.com/samartha-siddhartha/readmebro/issues"

[project.scripts]
readmebro = "readmebro.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["readmebro*"]

[tool.setuptools]
include-package-data = true
