[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readmebro"
version = "1.2.0"
description = "AI-powered and AI-optional Python documentation generator"
authors = [
    { name = "Samartha Siddhartha", email = "samartha.siddhartha@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "requests>=2.31.0",
    "yaspin>=2.2.0",
    "networkx>=3.1,<4.0",   # lock to major version 3 for compatibility
    "pyvis>=0.3.2,<0.4.0"   # lock to stable 0.3.x versions
]

optional-dependencies = { ai = ["ollama>=0.1.0"] }
keywords = ["documentation", "code-analysis", "readme", "AI", "ollama", "codellama"]

[project.urls]
"Homepage" = "https://github.com/samartha-siddhartha/readmebro"
"Bug Tracker" = "https://github.com/samartha-siddhartha/readmebro/issues"

[project.scripts]
readmebro = "readmebro.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["readmebro*"]

[tool.setuptools]
include-package-data = true
